task page contrast issue resolved

--- a/forms-flow-theme/src/global.scss
+++ b/forms-flow-theme/src/global.scss
@@ -537,7 +537,7 @@ div[disabled] {
 }
 
 .tooltiptext {
-  color: #757575;
+  color: var(--color-gray-800);
 }
 
 .select_download {
